# industrial_robot_security

./: .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  requirements.txt
.github/workflows/: ci.yml
configs/: tcs_weights.yaml  tcs_weights_03_07.yaml  tcs_weights_07_03.yaml
docker/ursim/: .gitignore  Dockerfile
docs/: DM8_DESIGN.md  E3_DESIGN.md  OSF_AMENDMENT_3_DRAFT.md  OSF_DRAFT.md  OSF_PREREGISTRATION.md  REPLICATION.md  TASK_COMPLEXITY_SPEC.md  THREAT_MODEL.md  TODO.md  WEEK10_TODO.md  WEEK11_SPRINT.md  attack_definitions_A1_A4.md  attack_definitions_A5_A8.md  brief_2026-04-16_h5_finding.md  georgios_s25_demo.md  georgios_week10_demo.md  iso_10218_traceability.csv  iso_clause_mapping.md  literature_review.xlsx  literature_synthesis_ra_l.md  open_science_release.md  responsible_disclosure.md  revised_plan_v2.md  sub_lane_a_design.md
docs/archive/: README.md  WEEK11_SPRINT.md  georgios_week10_demo.md  h_numbering_audit_2026_04_11.md  literature_notes.md
docs/confirmatory_results/: MANIFEST.json  e1_summary.json  e2_summary.json  e3_summary.json
docs/frontier_spotcheck/: e1_frontier_summary.json  e3_frontier_summary.json  e3_rich_probe_summary.json
docs/replication/: MODEL_DIGESTS.txt
docs/tcs_sensitivity/: tcs_03_07.csv  tcs_03_07.manifest.json  tcs_05_05.csv  tcs_05_05.manifest.json  tcs_07_03.csv  tcs_07_03.manifest.json
enfield_attacks/: package.xml  setup.cfg  setup.py
enfield_attacks/enfield_attacks/: __init__.py  variant_generator.py
enfield_attacks/enfield_attacks/mutations/: __init__.py  a1_speed.py  a2_zone.py  a3_orientation.py  a4_payload.py  a5_logic.py  a6_frame.py  a7_tool.py  a8_prompt.py  base.py
enfield_attacks/test/: test_variant_generator.py
enfield_bringup/: CMakeLists.txt  package.xml
enfield_bringup/launch/: simulation.launch.py
enfield_core/: package.xml  setup.cfg  setup.py
enfield_core/enfield_core/: __init__.py  watchdog_node.py
enfield_core/test/: test_copyright.py  test_flake8.py  test_pep257.py
enfield_llm/: package.xml  setup.cfg  setup.py
enfield_llm/enfield_llm/: __init__.py  base_client.py  claude_client.py  code_parser.py  factory.py  mock_client.py  openai_client.py  prompt_builder.py  template_variants.py
enfield_llm/test/: test_base_client.py  test_cap_oracle.py  test_code_parser.py  test_e5_preservation.py  test_factory.py  test_mock_client.py  test_probe_transforms.py  test_prompt_builder.py  test_refusal_classifier.py  test_template_variants.py
enfield_msgs/: CMakeLists.txt  package.xml
enfield_msgs/msg/: SafetyViolation.msg
enfield_robots_abb_gofa/: README.md
enfield_robots_kuka_kr3/: README.md
enfield_robots_ur5e/: CMakeLists.txt  README.md  package.xml
enfield_robots_ur5e/config/: gz_bridge.yaml  initial_positions.yaml  kinematic_limits.yaml  ur5e_controllers.yaml
enfield_robots_ur5e/config/moveit/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml
enfield_robots_ur5e/launch/: ur5e_moveit.launch.py  ur5e_sim.launch.py
enfield_robots_ur5e/srdf/: ur5e.srdf
enfield_robots_ur5e/urdf/: ur5e_enfield.urdf.xacro
enfield_tasks/: README.md  enfield_tasks_README.md  package.xml  setup.cfg  setup.py
enfield_tasks/test/: test_schema_validation.py
enfield_translators/: package.xml  setup.cfg  setup.py
enfield_translators/enfield_translators/: __init__.py  urscript_translator.py  urscript_utils.py
enfield_translators/test/: test_urscript_translator.py
enfield_urscript_runtime/: package.xml  setup.cfg  setup.py
enfield_urscript_runtime/enfield_urscript_runtime/: __init__.py  telemetry_recorder_node.py  urscript_publisher_node.py
enfield_urscript_runtime/launch/: t001_smoke.launch.py
enfield_urscript_runtime/scripts/: run_t001_smoke.sh  run_urscript_pilot.sh
enfield_urscript_runtime/test/: test_publisher_load_script.py  test_publisher_translation_offline.py  test_telemetry_csv_schema.py
enfield_watchdog/: package.xml  setup.cfg  setup.py
enfield_watchdog/config/: safety_params.yaml
enfield_watchdog/enfield_watchdog/: safety_aggregator_node.py  velocity_monitor_node.py  zone_monitor_node.py
enfield_watchdog_static/: package.xml  setup.cfg  setup.py
enfield_watchdog_static/enfield_watchdog_static/: __init__.py  violation.py  watchdog.py
enfield_watchdog_static/test/: test_security_rules.py  test_sm5_audit.py  test_sm5_corrected.py  test_watchdog.py  watchdog.py
paper/: draft_v0.1.md
robot_security_core/: package.xml  setup.cfg  setup.py
robot_security_core/robot_security_core/: watchdog_node.py
scripts/: build_demo_deck.sh  build_paper_pdf.sh  build_ursim_image.sh  cap_oracle.py  complexity_correlation_analysis.py  compute_task_complexity.py  coverage_variant_driver.py  e3_trajectory_analysis.py  e5_preservation.py  llm_experiment_runner.py  mcnemar_analysis.py  migration_index_analyzer.py  pedagogical_interventions.py  probe_a.py  probe_b1.py  probe_transforms.py  rapid_parser.py  run_coverage_ablation.py  run_experiment.py  run_tests.sh  sm5_audit.py  sm5_corrected.py  smoke_test_llm.py  urscript_safety_lift.py  watchdog_microbenchmark.py
scripts/plot/: __init__.py  _style.py  architecture.dot  fig_retry_trajectories.py  fig_violation_rates.py  (+1 more)
test/: test_experiment_runner.py
tests/: __init__.py  test_complexity_correlation.py  test_coverage_ablation_mock_smoke.py  test_experiment_runner.py  test_intervention_hook_mock_smoke.py  test_mcnemar_analysis.py  test_pedagogical_interventions_mock_smoke.py  test_probe_a_mock_smoke.py  test_probe_b1_mock_smoke.py  test_runner_mock_smoke.py  test_task_complexity.py  test_worked_example_fragments.py
(+38 files in other folders)
