<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>enfield_attacks</name>
  <version>0.1.0</version>
  <description>Adversarial attack generators for A1-A8 (Phase 2). Simulation-only.</description>
  <maintainer email="yunusemrecogurcu@gmail.com">Yunus Emre Cogurcu</maintainer>
  <license>Apache-2.0</license>

  
  <depend>rclpy</depend>
  <depend>enfield_core</depend>
  <depend>enfield_tasks</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
