<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>enfield_robots_ur5e</name>
  <version>0.1.0</version>
  <description>UR5e robot adapter: URDF, MoveIt2 config, Gazebo launch, kinematic limits.</description>
  <maintainer email="yunusemrecogurcu@gmail.com">Yunus Emre Cogurcu</maintainer>
  <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
