<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>enfield_urscript_runtime</name>
  <version>0.1.0</version>
  <description>
    URScript runtime nodes for ENFIELD: publishes translator output to
    ur_robot_driver and records URSim telemetry. Simulation-only.
  </description>
  <maintainer email="yunusemrecogurcu@gmail.com">Yunus Emre Cogurcu</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>enfield_translators</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
